# scraping_q

./: README.md
scraping_q/: pyproject.toml
scraping_q/scraping_q/: authors.json  connect.py  main.py  models.py  quotes.json  read.py
